--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://localhost:3306/budget_tracker
-spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.minimum-idle=10
-spring.datasource.hikari.maximum-pool-size=50
+
+spring.jpa.hibernate.ddl-auto = update
