--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://localhost:3306/budget_tracker
 
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
